[project]
name = "radio-fits-combiner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy>=7.2.0",
    "radio-beam>=0.3.9",
    "reproject>=0.19.0",
]

[tool.ty.rules]
unresolved-attribute = "ignore"
unresolved-import = "ignore"

[tool.ruff.lint]
ignore = ["E701","E702","E722"]
